added style to "trade now" button

--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -19,6 +19,10 @@
   p, label, h1, h2, h3, h4, h5,th, td {
     color: #333333;
   }
+  .want_mine {
+    font-weight: bold;
+    font-size: larger;
+  }
 }
 
 //.thumbnail-image-div {
