--- a/app/views/items/_item_block.html.erb
+++ b/app/views/items/_item_block.html.erb
@@ -7,15 +7,23 @@
       <div class="caption">
         <p><%= locals[:item].description %></p>
         <p><%= locals[:item].type.description %> במצב   <%= locals[:item].state.description %> נקנה לפני  <%= locals[:item].age.description %> ב<%= locals[:item].price.description %></p>
-        <p><%= locals[:item].user.first_name %> (<%= locals[:item].user.region.description %>)</p>
+        <p><%= locals[:item].user.first_name %> (<%= locals[:item].user.region.description %>)
+          <% if locals[:type] == :want_mine %>
+            <span class="want_mine">שרוצה תמונה שלי</span>
+          <% end %>
+        </p>
           <% if locals[:item].user == current_user %>
             <%= link_to t('Edit'), edit_item_path(locals[:item]), :class => "btn btn-info" %>
             <%= link_to t('Destroy'), locals[:item], method: :delete, data: { confirm: t('areYouSure') }, :class => "btn btn-info" %>
           <% else %>
-            <% if locals[:item].want_users.include?(current_user) %>
-              <%= link_to t('want'), toggle_wants_path(want: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-success want_btn" %>
+            <% if locals[:type] == :want_mine %>
+              <%= link_to t('trade'), '/', format: :json, remote: true, method: :post, :class => "btn btn-info want_btn" %>
             <% else %>
-              <%= link_to t('want'), toggle_wants_path(want: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-default want_btn" %>
+              <% if locals[:item].want_users.include?(current_user) %>
+                <%= link_to t('want'), toggle_wants_path(want: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-success want_btn" %>
+              <% else %>
+                <%= link_to t('want'), toggle_wants_path(want: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-default want_btn" %>
+              <% end %>
             <% end %>
             <%= link_to t('block'), apply_blocks_path(block: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-danger pull-left" %>
           <% end %>
