--- a/app/views/users/_modal_item_block.html.erb
+++ b/app/views/users/_modal_item_block.html.erb
@@ -1,4 +1,4 @@
-<li class="col-lg-3 col-md-4 col-sm-6 col-xs-12" data-item-type = "<%= locals[:item].type %>" data-item-id = "<%= locals[:item].id %>">
+<li class="col-lg-3 col-md-4 col-sm-6 col-xs-12" data-item-type = "modal" data-item-id = "<%= @user.id %>">
   <div class="thumbnail">
       <div class="thumbnail-image-div">
         <p class="thumbnail_image_size"><%= locals[:item].width  %>X<%= locals[:item].height %></p>
@@ -11,7 +11,7 @@
           <% if locals[:item].user == current_user %>
             <%= locals[:item].user.first_name %> (<%= locals[:item].user.region.description %>)
           <% else %>
-            <%= link_to "%s (%s)" % [locals[:item].user.first_name, locals[:item].user.region.description], modal_users_path(id: locals[:item].user_id, type: locals[:type]), format: :json, remote: true, :class => "btn btn-default btn-sm" %>
+            <%= link_to "%s (%s)" % [locals[:item].user.first_name, locals[:item].user.region.description], modal_users_path(id: locals[:item].user_id), format: :json, remote: true, :class => "btn btn-default btn-sm" %>
         <% end %>
 
           <% if locals[:type] == :want_mine %>
