some small fixes

--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -44,6 +44,11 @@
   opacity: 0.75;
 }
 
+.thumbnail_close {
+  position: absolute;
+
+}
+
 .short_box {
   width: 120px !important;
   margin-left: 75px;
