--- a/app/views/items/_item_block.html.erb
+++ b/app/views/items/_item_block.html.erb
@@ -1,14 +1,17 @@
 <li class="col-lg-3 col-md-4 col-sm-6 col-xs-12" data-item-type = "<%= locals[:item].type %>" data-item-id = "<%= locals[:item].id %>">
   <div class="thumbnail">
       <div class="thumbnail-image-div">
-        <p class="thumbnail_image_size"><%= locals[:item].width  %>X<%= locals[:item].height %></p>
+        <div style="direction: ltr"><p class="thumbnail_image_size"><%= locals[:item].width  %>X<%= locals[:item].height %></p></div>
+        <% unless locals[:item].user == current_user %>
+          <%= link_to 'X', apply_blocks_path(block: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-danger thumbnail_close" %>
+        <% end %>
         <img src= <%= locals[:item].image.url(:thumb) %> alt="">
       </div>
       <div class="caption">
         <p><%= locals[:item].description %></p>
         <p><%= locals[:item].type.description %> במצב   <%= locals[:item].state.description %> נקנה לפני  <%= locals[:item].age.description %> ב<%= locals[:item].price.description %></p>
         <p>
-          <% if locals[:item].user == current_user %>
+          <% if locals[:item].user == current_user || locals[:item].user.items.length == 1%>
             <%= locals[:item].user.first_name %> (<%= locals[:item].user.region.description %>)
           <% else %>
             <%= link_to "%s (%s)" % [locals[:item].user.first_name, locals[:item].user.region.description], modal_users_path(id: locals[:item].user_id, type: locals[:type]), format: :json, remote: true, :class => "btn btn-default btn-sm" %>
@@ -32,7 +35,6 @@
                 <%= link_to t('want'), toggle_wants_path(want: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-warning want_btn" %>
               <% end %>
             <% end %>
-            <%= link_to t('block'), apply_blocks_path(block: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-danger pull-left" %>
           <% end %>
         </p>
       </div>
