--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -48,7 +48,6 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
           <h4 class="modal-title" id="UserModalLabel"></h4>
         </div>
         <div class="modal-body">
@@ -58,7 +57,7 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal">סגור</button>
         </div>
       </div>
     </div>
