--- a/app/views/users/_modal_item_block.html.erb
+++ b/app/views/users/_modal_item_block.html.erb
@@ -1,18 +1,17 @@
-<li class="col-lg-3 col-md-4 col-sm-6 col-xs-12" data-item-type = "modal" data-item-id = "<%= @user.id %>">
+<li class="col-lg-6 col-md-6 col-sm-6 col-xs-12" data-item-type = "modal" data-item-id = "<%= locals[:item].id %>">
   <div class="thumbnail">
-      <div class="thumbnail-image-div">
-        <p class="thumbnail_image_size"><%= locals[:item].width  %>X<%= locals[:item].height %></p>
-        <img src= <%= locals[:item].image.url(:thumb) %> alt="">
-      </div>
+    <div class="thumbnail-image-div">
+      <div style="direction: ltr"><p class="thumbnail_image_size"><%= locals[:item].width  %>X<%= locals[:item].height %></p></div>
+      <% unless locals[:item].user == current_user %>
+        <%= link_to 'X', apply_blocks_path(block: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-danger thumbnail_close" %>
+      <% end %>
+      <img src= <%= locals[:item].image.url(:thumb) %> alt="">
+    </div>
       <div class="caption">
         <p><%= locals[:item].description %></p>
         <p><%= locals[:item].type.description %> במצב   <%= locals[:item].state.description %> נקנה לפני  <%= locals[:item].age.description %> ב<%= locals[:item].price.description %></p>
         <p>
-          <% if locals[:item].user == current_user %>
-            <%= locals[:item].user.first_name %> (<%= locals[:item].user.region.description %>)
-          <% else %>
-            <%= link_to "%s (%s)" % [locals[:item].user.first_name, locals[:item].user.region.description], modal_users_path(id: locals[:item].user_id), format: :json, remote: true, :class => "btn btn-default btn-sm" %>
-        <% end %>
+          <%= locals[:item].user.first_name %> (<%= locals[:item].user.region.description %>)
 
           <% if locals[:type] == :want_mine %>
             <span class="want_mine">שרוצה תמונה שלי</span>
@@ -32,7 +31,6 @@
                 <%= link_to t('want'), toggle_wants_path(want: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-warning want_btn" %>
               <% end %>
             <% end %>
-            <%= link_to t('block'), apply_blocks_path(block: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-danger pull-left" %>
           <% end %>
         </p>
       </div>
