working with one _item_block for the modal as well

--- a/app/views/users/modal.js.erb
+++ b/app/views/users/modal.js.erb
@@ -1,7 +1,7 @@
 $('#modal-injection').empty();
 $('#UserModalLabel').text("התמונות של <%= @user.first_name %> מ<%= @user.region.description %> ");
 <% @user_items.each do |item| %>
-  $("<%= escape_javascript render(:file => 'users/_modal_item_block', locals: {locals: {item: item}}) %>").appendTo('#modal-injection');
+  $("<%= escape_javascript render(:file => 'items/_item_block', locals: {locals: {item: item, type: :modal}}) %>").appendTo('#modal-injection');
 <% end %>
 
 $('#UserModal').modal();
