--- a/app/views/items/_item_block.html.erb
+++ b/app/views/items/_item_block.html.erb
@@ -1,4 +1,8 @@
-<li class="col-lg-3 col-md-4 col-sm-6 col-xs-12" data-item-type = "<%= locals[:item].type %>" data-item-id = "<%= locals[:item].id %>">
+<% if locals[:type] == :modal %>
+  <li class="col-lg-6 col-md-6 col-sm-6 col-xs-12" data-item-type = "<%= locals[:type] %>" data-item-id = "<%= locals[:item].id %>">
+<% else %>
+  <li class="col-lg-3 col-md-4 col-sm-6 col-xs-12" data-item-type = "<%= locals[:type] %>" data-item-id = "<%= locals[:item].id %>">
+<% end %>
   <div class="thumbnail">
       <div class="thumbnail-image-div">
         <div style="direction: ltr"><p class="thumbnail_image_size"><%= locals[:item].width  %>X<%= locals[:item].height %></p></div>
@@ -11,7 +15,7 @@
         <p><%= locals[:item].description %></p>
         <p><%= locals[:item].type.description %> במצב   <%= locals[:item].state.description %> נקנה לפני  <%= locals[:item].age.description %> ב<%= locals[:item].price.description %></p>
         <p>
-          <% if locals[:item].user == current_user || locals[:item].user.items.length == 1%>
+          <% if locals[:item].user == current_user || locals[:item].user.items.length == 1 || locals[:type] == :modal %>
             <%= locals[:item].user.first_name %> (<%= locals[:item].user.region.description %>)
           <% else %>
             <%= link_to "%s (%s)" % [locals[:item].user.first_name, locals[:item].user.region.description], modal_users_path(id: locals[:item].user_id, type: locals[:type]), format: :json, remote: true, :class => "btn btn-default btn-sm" %>
