--- a/app/views/users/modal.js.erb
+++ b/app/views/users/modal.js.erb
@@ -1,5 +1,7 @@
 $('#modal-injection').empty();
-$('#UserModalLabel').text("התמונות של <%= @user.first_name %> מ<%= @user.region.description %> ");
+<% @from = "מ" %>
+<% @pictures_by = "התמונות של" %>
+$('#UserModalLabel').text("<%= @pictures_by %> <%= @user.first_name %> <%= @from %><%= @user.region.description %>")
 <% @user_items.each do |item| %>
   $("<%= escape_javascript render(:file => 'items/_item_block', locals: {locals: {item: item, type: :modal}}) %>").appendTo('#modal-injection');
 <% end %>
