--- a/app/views/items/_item_block.html.erb
+++ b/app/views/items/_item_block.html.erb
@@ -1,4 +1,4 @@
-<% if locals[:type] == :modal %>
+<% if locals[:type] == :modal || locals[:type] == :swap_modal %>
   <li class="col-lg-6 col-md-6 col-sm-6 col-xs-12" data-item-type = "<%= locals[:type] %>" data-item-id = "<%= locals[:item].id %>">
 <% else %>
   <li class="col-lg-3 col-md-4 col-sm-6 col-xs-12" data-item-type = "<%= locals[:type] %>" data-item-id = "<%= locals[:item].id %>">
@@ -15,13 +15,13 @@
       <p><%= locals[:item].description %></p>
       <p><%= locals[:item].type.description %> במצב   <%= locals[:item].state.description %> נקנה לפני  <%= locals[:item].age.description %> ב<%= locals[:item].price.description %></p>
       <p>
-      <% if locals[:item].user == current_user || locals[:item].user.items.length == 1 || locals[:type] == :modal %>
+      <% if locals[:item].user == current_user || locals[:item].user.items.length == 1 || locals[:type] == :modal || locals[:type] == :swap_modal %>
         <%= locals[:item].user.first_name %> (<%= locals[:item].user.region.description %>)
       <% else %>
         <% if locals[:type] == :want_mine %>
-          <%= link_to "%s (%s)" % [locals[:item].user.first_name, locals[:item].user.region.description], modal_swap_users_path(id: locals[:item].user_id, type: locals[:type]), format: :json, remote: true, :class => "btn btn-default btn-sm" %>
+          <%= link_to "%s (%s)" % [locals[:item].user.first_name, locals[:item].user.region.description], modal_swap_users_path(id: locals[:item].user_id, type: locals[:type]), format: :json, remote: true %>
         <% else %>
-          <%= link_to "%s (%s)" % [locals[:item].user.first_name, locals[:item].user.region.description], modal_users_path(id: locals[:item].user_id, type: locals[:type]), format: :json, remote: true, :class => "btn btn-default btn-sm" %>
+          <%= link_to "%s (%s)" % [locals[:item].user.first_name, locals[:item].user.region.description], modal_users_path(id: locals[:item].user_id, type: locals[:type]), format: :json, remote: true %>
         <% end %>
       <% end %>
       <% if locals[:type] == :want_mine %>
@@ -34,12 +34,12 @@
         <%= link_to t('Destroy'), locals[:item], method: :delete, data: { confirm: t('areYouSure') }, :class => "btn btn-info" %>
       <% else %>
         <% if locals[:type] == :want_mine %>
-          <%= link_to t('trade'), modal_swap_users_path(id: locals[:item].user_id, type: locals[:type]), format: :json, remote: true, :class => "btn btn-info want_btn" %>
-        <% else %>
+          <%= link_to t('want'), modal_swap_users_path(id: locals[:item].user_id, type: locals[:type]), format: :json, remote: true, :class => "btn btn-default" %>
+      <% else %>
           <% if locals[:item].want_users.include?(current_user) %>
-            <%= link_to t('dont_want'), toggle_wants_path(want: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-success want_btn" %>
+            <%= link_to t('want'), toggle_wants_path(want: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-success want-btn" %>
           <% else %>
-            <%= link_to t('want'), toggle_wants_path(want: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-warning want_btn" %>
+            <%= link_to t('want'), toggle_wants_path(want: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-default want-btn" %>
           <% end %>
         <% end %>
       <% end %>
