--- a/app/views/users/modal.js.erb
+++ b/app/views/users/modal.js.erb
@@ -5,5 +5,5 @@ $('#UserModalLabel').text("<%= @pictures_by %> <%= @user.first_name %> <%= @from
 <% @user_items.each do |item| %>
   $("<%= escape_javascript render(:file => 'items/_item_block', locals: {locals: {item: item, type: :modal}}) %>").appendTo('#modal-injection');
 <% end %>
-
+$('#swap-btn').hide();
 $('#UserModal').modal();
