--- a/app/views/wants/toggle.js.erb
+++ b/app/views/wants/toggle.js.erb
@@ -1,9 +1,13 @@
 <% if @want.persisted? %>
-  $('li[data-item-id="<%= @want.item_id %>"] .want_btn').addClass('btn-success');
-  $('li[data-item-id="<%= @want.item_id %>"] .want_btn').removeClass('btn-warning');
-  $('li[data-item-id="<%= @want.item_id %>"] .want_btn').text("בטל החלפה");
+  $('li[data-item-id="<%= @want.item_id %>"] .want-btn').addClass('btn-success');
+  $('li[data-item-id="<%= @want.item_id %>"] .want-btn').removeClass('btn-default');
 <% else %>
-  $('li[data-item-id="<%= @want.item_id %>"] .want_btn').removeClass('btn-success');
-  $('li[data-item-id="<%= @want.item_id %>"] .want_btn').addClass('btn-warning');
-  $('li[data-item-id="<%= @want.item_id %>"] .want_btn').text("הצע החלפה");
+  $('li[data-item-id="<%= @want.item_id %>"] .want-btn').removeClass('btn-success');
+  $('li[data-item-id="<%= @want.item_id %>"] .want-btn').addClass('btn-default');
 <% end %>
+var is_valid = $('li[data-item-type="swap_modal"]').find(".want-btn").hasClass('btn-success');
+if (is_valid) {
+  $('#swap-btn').show()
+} else {
+  $('#swap-btn').hide()
+}
