added gallery controller, working on the 4 states

--- a/app/views/wants/toggle.js.erb
+++ b/app/views/wants/toggle.js.erb
@@ -1,9 +1,9 @@
-<% if @want.persisted? %>
+<% if @state == 1 %>
+  $('li[data-item-id="<%= @item_id %>"] .want-btn').removeClass('btn-success');
+  $('li[data-item-id="<%= @item_id %>"] .want-btn').addClass('btn-default');
+<% elsif @state == 2 %>
   $('li[data-item-id="<%= @want.item_id %>"] .want-btn').addClass('btn-success');
   $('li[data-item-id="<%= @want.item_id %>"] .want-btn').removeClass('btn-default');
-<% else %>
-  $('li[data-item-id="<%= @want.item_id %>"] .want-btn').removeClass('btn-success');
-  $('li[data-item-id="<%= @want.item_id %>"] .want-btn').addClass('btn-default');
 <% end %>
 var is_valid = $('li[data-item-type="swap_modal"]').find(".want-btn").hasClass('btn-success');
 if (is_valid) {
