--- a/app/views/wants/toggle.js.erb
+++ b/app/views/wants/toggle.js.erb
@@ -1,7 +1,7 @@
-<% if @state == 1 %>
+<% if @state == 1 || @state == 3 %>
   $('li[data-item-id="<%= @item_id %>"] .want-btn').removeClass('btn-success');
   $('li[data-item-id="<%= @item_id %>"] .want-btn').addClass('btn-default');
-<% elsif @state == 2 %>
+<% else %>
   $('li[data-item-id="<%= @want.item_id %>"] .want-btn').addClass('btn-success');
   $('li[data-item-id="<%= @want.item_id %>"] .want-btn').removeClass('btn-default');
 <% end %>
