--- a/app/views/items/_item_block.html.erb
+++ b/app/views/items/_item_block.html.erb
@@ -1,8 +1,4 @@
-<% if locals[:type] == :modal || locals[:type] == :swap_modal %>
-  <li class="col-lg-6 col-md-6 col-sm-6 col-xs-12" data-item-type = "<%= locals[:type] %>" data-item-id = "<%= locals[:item].id %>">
-<% else %>
-  <li class="col-lg-3 col-md-4 col-sm-6 col-xs-12" data-item-type = "<%= locals[:type] %>" data-item-id = "<%= locals[:item].id %>">
-<% end %>
+<li class="col-lg-3 col-md-4 col-sm-6 col-xs-12" data-item-id = "<%= locals[:item].id %>">
   <div class="thumbnail">
     <div class="thumbnail-image-div">
       <div style="direction: ltr"><p class="thumbnail_image_size"><%= locals[:item].width  %>X<%= locals[:item].height %></p></div>
@@ -15,10 +11,10 @@
       <p><%= locals[:item].description %></p>
       <p><%= locals[:item].type.description %> במצב   <%= locals[:item].state.description %> נקנה לפני  <%= locals[:item].age.description %> ב<%= locals[:item].price.description %></p>
       <p>
-      <% if locals[:item].user == current_user || locals[:item].user.items.length == 1 || locals[:type] == :modal || locals[:type] == :swap_modal %>
+      <% if locals[:item].user == current_user || locals[:item].user.items.length == 1 %>
         <%= locals[:item].user.first_name %> (<%= locals[:item].user.region.description %>)
       <% else %>
-        <%= link_to "%s (%s)" % [locals[:item].user.first_name, locals[:item].user.region.description], modal_users_path(id: locals[:item].user_id), format: :json, remote: true %>
+        <%= link_to "%s (%s)" % [locals[:item].user.first_name, locals[:item].user.region.description], modal_users_path(id: locals[:item].user_id), format: :json, remote: true, :class => "user_modal_link" %>
       <% end %>
       <% if locals[:state] == 3 %>
         <span>שרוצה תמונה שלי</span>
