--- a/app/views/users/modal.js.erb
+++ b/app/views/users/modal.js.erb
@@ -4,7 +4,8 @@ $('#my-area').empty();
 <% @pictures_by = "התמונות של" %>
 $('#UserModalLabel').text("<%= @pictures_by %> <%= @user.first_name %> <%= @from %><%= @user.region.description %>")
 $("<%= escape_javascript render(:file => 'items/_my_items', locals: {locals: {user: @user, my_items_user_wants: @my_items_user_wants}}) %>").appendTo('#my-area');
-<% @user_items.each do |item| %>
-  $("<%= escape_javascript render(:file => 'items/_item_block', locals: {locals: {item: item, type: :modal}}) %>").appendTo('#modal-injection');
+<% @items.each do |item| %>
+  $("<%= escape_javascript render(:file => 'items/_item_block', locals: {locals: {item: item, state: @states[item.id]}}) %>").appendTo('#modal-injection');
 <% end %>
+adjustModalThumbnail();
 $('#UserModal').modal();
