some css work on user info in thumbnails

--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -23,6 +23,14 @@
     font-weight: bold;
     font-size: larger;
   }
+  .wants_to_swap {
+    font-weight: bolder;
+    font-size: larger;
+  }
+  .user_info {
+    color: darkred;
+    font-weight: bolder;
+  }
 }
 
 //.thumbnail-image-div {
