--- a/app/views/items/_my_items.html.erb
+++ b/app/views/items/_my_items.html.erb
@@ -1,5 +1,5 @@
 <h3 style="color: #f5f5f5"><%= "#{t('my_items_user_wants_1')}#{locals[:user].first_name} #{t('my_items_user_wants_2')}:" %></h3>
-<div class="gallery">
+<div class="gallery_thumbnail">
   <ul class="row">
     <% locals[:my_items_user_wants].each do |item| %>
       <li class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
