--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.gallery{
+.gallery_thumbnail{
   ul {
     padding:0 0 0 0;
     margin:0 0 0 0;
