--- a/app/views/items/_item_block.html.erb
+++ b/app/views/items/_item_block.html.erb
@@ -11,7 +11,7 @@
       <p><%= locals[:item].description %></p>
       <p><%= locals[:item].type.description %> במצב   <%= locals[:item].state.description %> נקנה לפני  <%= locals[:item].age.description %> ב<%= locals[:item].price.description %></p>
       <p>
-      <% if locals[:item].user == current_user || locals[:item].user.items.length == 1 %>
+      <% if locals[:item].user == current_user || (locals[:item].user.items.length == 1 && locals[:state] < 3 )%>
         <%= locals[:item].user.first_name %> (<%= locals[:item].user.region.description %>)
       <% else %>
         <%= link_to "%s (%s)" % [locals[:item].user.first_name, locals[:item].user.region.description], modal_users_path(id: locals[:item].user_id), format: :json, remote: true, :class => "user_modal_link" %>
