--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -65,3 +65,15 @@
   width: 120px !important;
   margin-left: 75px;
 }
+
+.progress {
+  max-width: 600px;
+  margin:    0.2em 0 0.2em 0;
+}
+
+.progress .bar {
+  height:  1.2em;
+  padding: 0.2em;
+  color:   white;
+  display: none;
+}
