--- a/app/views/items/_my_items.html.erb
+++ b/app/views/items/_my_items.html.erb
@@ -5,7 +5,7 @@
       <li class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         <div class="thumbnail">
           <div class="thumbnail-image-div">
-            <img src= <%= item.image_url %> alt="">
+            <img src= <%= S3_PATH + item.image_url %> alt="">
           </div>
         </div>
       </li>
