--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -40,8 +40,9 @@
 //}
 //
 .thumbnail img {
-  width: 100%;
-  height: 100%;
+  height: 200px;
+  max-width:100%;
+  margin: 0 auto;
 }
 
 .thumbnail_image_size {
