--- a/app/views/items/_item_block.html.erb
+++ b/app/views/items/_item_block.html.erb
@@ -5,7 +5,7 @@
       <% unless locals[:item].user == current_user %>
         <%= link_to 'X', apply_blocks_path(block: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-danger thumbnail_close" %>
       <% end %>
-      <img src= <%= S3_PATH + locals[:item].image_url %> alt="">
+      <img src= <%= S3_PATH + locals[:item].image_url %> alt="" class="center-block">
     </div>
     <div class="caption">
       <p><%= locals[:item].description %></p>
@@ -18,11 +18,11 @@
       <% end %>
       <% if locals[:state] == 3 || locals[:state] == 4 %>
         <span class="wants_to_swap">רוצה להתחלף!</span>
-        <% end %>
+      <% end %>
       <% if locals[:state] == 4 %>
         <p class="user_info">
         <% if locals[:item].user.email.present? %>
-          <%=	locals[:item].user.email %> <br/>
+          <a href="mailto:<%=	locals[:item].user.email %>"> <%=	locals[:item].user.email %> </a> <br/>
         <% end %>
         <% if locals[:item].user.phone.present? %>
           <%=	locals[:item].user.phone %>
