--- a/app/views/items/_item_block.html.erb
+++ b/app/views/items/_item_block.html.erb
@@ -10,7 +10,7 @@
     <div class="caption">
       <p><%= locals[:item].description %></p>
       <p><%= locals[:item].type.description %> במצב   <%= locals[:item].state.description %> נקנה לפני  <%= locals[:item].age.description %> ב<%= locals[:item].price.description %></p>
-      <p>
+      <p class="user_name">
       <% if locals[:item].user == current_user || (locals[:item].user.items.length == 1 && locals[:state] < 3 )%>
         <%= locals[:item].user.first_name %> (<%= locals[:item].user.region.description %>)
       <% else %>
@@ -18,16 +18,6 @@
       <% end %>
       <% if locals[:state] == 3 || locals[:state] == 4 %>
         <span class="wants_to_swap">רוצה להתחלף!</span>
-      <% end %>
-      <% if locals[:state] == 4 %>
-        <p class="user_info">
-        <% if locals[:item].user.email.present? %>
-          <a href="mailto:<%=	locals[:item].user.email %>"> <%=	locals[:item].user.email %> </a> <br/>
-        <% end %>
-        <% if locals[:item].user.phone.present? %>
-          <%=	locals[:item].user.phone %>
-        <% end %>
-        </p>
       <% end %>
       <p>
       <% if locals[:item].user == current_user %>
@@ -39,6 +29,10 @@
         <% else %>
           <%= link_to t('want'), toggle_wants_path(want: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-default want-btn" %>
         <% end %>
+      <% end %>
+      <% if locals[:state] == 4 %>
+      <span class="user_info">
+        <%= link_to "%s" % [t('model.contact')], modal_contact_users_path(id: locals[:item].user_id), format: :json, remote: true, :class => "contact_modal_link" %>      </span>
       <% end %>
       </p>
     </div>
