--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -32,4 +32,27 @@
       </div>
     </div>
   </div>
+
+<!--***** MODAL *****-->
+<div class="modal fade" id="UserContactModal" tabindex="-1" role="dialog" aria-labelledby="UserContactModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times; &NonBreakingSpace;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="UserModalLabel">פרטי התקשרות</h4>
+      </div>
+      <div class="modal-body">
+        <div id="my-area">
+          <h4><span class="first_name"></span> <span class="last_name"></span></h4>
+          <hr />
+          <p class="user_email"></p>
+          <p class="user_phone"></p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-lg btn-danger" data-dismiss="modal">סגור</button>
+      </div>
+    </div>
+  </div>
+</div>
 <% end %>
