--- a/app/views/items/_item_block.html.erb
+++ b/app/views/items/_item_block.html.erb
@@ -14,7 +14,7 @@
       <% if locals[:item].user == current_user || (locals[:item].user.items.length == 1 && locals[:state] < 3 )%>
         <%= locals[:item].user.first_name %> (<%= locals[:item].user.region.description %>)
       <% else %>
-        <%= link_to "%s (%s)" % [locals[:item].user.first_name, locals[:item].user.region.description], modal_users_path(id: locals[:item].user_id), format: :json, remote: true, :class => "user_modal_link" %>
+        <%= link_to "%s (%s)" % [locals[:item].user.first_name, locals[:item].user.region.description], modal_users_path(user_id: locals[:item].user_id), format: :json, remote: true, :class => "user_modal_link" %>
       <% end %>
       <% if locals[:state] == 3 || locals[:state] == 4 %>
         <span class="wants_to_swap">רוצה להתחלף!</span>
