relative position to long-description

--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -36,6 +36,9 @@
     font-weight: bolder;
     font-size: larger;
   }
+  .long-description {
+    position: absolute;
+  }
 }
 
 //.thumbnail-image-div {
