moved to icons in buttons in gallery

--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -32,12 +32,14 @@
     font-size: larger;
   }
   .user_info a{
-    color: darkred !important;
-    font-weight: bolder;
-    font-size: larger;
+    font-size: 30px;
   }
   .long-description {
     position: absolute;
+  }
+
+  .fa-thumbs-up {
+    font-size: 30px;
   }
 }
 
