--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -43,10 +43,10 @@
       </div>
       <div class="modal-body">
         <div id="my-area">
-          <h4><span class="first_name"></span> <span class="last_name"></span></h4>
+          <h2><span class="first_name"></span> <span class="last_name"></span></h2>
           <hr />
-          <p class="user_email"></p>
-          <p class="user_phone"></p>
+          <h3><a class="user_email"></a></h3>
+          <h3 class="user_phone"></h3>
         </div>
       </div>
       <div class="modal-footer">
