--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -31,14 +31,11 @@
     font-weight: bolder;
     font-size: larger;
   }
-  .user_info a{
-    font-size: 30px;
-  }
   .long-description {
     position: absolute;
   }
 
-  .fa-thumbs-up {
+  .fa {
     font-size: 30px;
   }
 }
@@ -57,10 +54,11 @@
 
 .thumbnail_image_size {
   position: absolute;
+  font-weight: bold;
   color: #222222;
   background-color: #eeeeee;
   padding: 2px;
-  opacity: 0.75;
+  opacity: 0.8;
 }
 
   .thumbnail_close {
