--- a/app/views/users/modal_contact.js.erb
+++ b/app/views/users/modal_contact.js.erb
@@ -1,5 +1,6 @@
 $('#UserContactModal .first_name').text("<%= @user.first_name %>");
 $('#UserContactModal .last_name').text(" <%= @user.last_name %>");
+$('#UserContactModal .region').text("<%= @user.region.description %>");
 $('#UserContactModal .user_email').text("<%= @user.email %>");
 $('#UserContactModal .user_email').attr("href", "mailto:<%= @user.email %>");
 $('#UserContactModal .user_phone').text("<%= @user.phone %>");
