added icons to all header titles

--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -58,13 +58,9 @@
 </div>
 
 <!--***** MODAL *****-->
-<div class="modal fade" id="UserContactModal" tabindex="-1" role="dialog" aria-labelledby="UserContactModalLabel" aria-hidden="true">
+<div class="modal fade" id="BlankUserModal" tabindex="-1" role="dialog" aria-labelledby="BlankUserModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times; &NonBreakingSpace;</span><span class="sr-only">סגור</span></button>
-        <h4 class="modal-title" id="UserModalLabel">פרטי התקשרות</h4>
-      </div>
       <div class="modal-body">
         <div id="my-area">
           <h2><span class="first_name"></span> <span class="last_name"></span></h2>
@@ -72,9 +68,6 @@
           <h3><a class="user_email"></a></h3>
           <h3 class="user_phone"></h3>
         </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-lg btn-danger" data-dismiss="modal">סגור</button>
       </div>
     </div>
   </div>
