--- a/app/views/layouts/_navigation_top.html.erb
+++ b/app/views/layouts/_navigation_top.html.erb
@@ -17,14 +17,14 @@
             <% if current_user.has_role? :admin %>
                 <%= render 'layouts/menu_option', option_path: users_path, option_name: t('navigation.admin') %>
             <% end %>
-            <%= render 'layouts/menu_option', option_path: new_item_path, option_name: t('navigation.new_item') %>
-            <%= render 'layouts/menu_option', option_path: items_path, option_name: t('navigation.items') %>
-            <%= render 'layouts/menu_option', option_path: edit_user_registration_path, option_name: t('navigation.edit_account') %>
-            <%= render 'layouts/menu_option', option_path: destroy_user_session_path, option_name: t('logout'), option_method: 'delete' %>
+            <%= render 'layouts/menu_option', option_path: new_item_path, option_name: t('navigation.new_item'), fa_name: 'fa-picture-o' %>
+            <%= render 'layouts/menu_option', option_path: items_path, option_name: t('navigation.items'), fa_name: 'fa-list-ul' %>
+            <%= render 'layouts/menu_option', option_path: edit_user_registration_path, option_name: t('navigation.edit_account'), fa_name: 'fa-wrench' %>
+            <%= render 'layouts/menu_option', option_path: destroy_user_session_path, option_name: t('logout'), option_method: 'delete', fa_name: 'fa-sign-out' %>
 
         <% else %>
-            <%= render 'layouts/menu_option', option_path: new_user_registration_path, option_name: t('navigation.register') %>
-            <%= render 'layouts/menu_option', option_path: new_user_session_path, option_name: t('login') %>
+            <%= render 'layouts/menu_option', option_path: new_user_registration_path, option_name: t('navigation.register'), fa_name: 'fa-pencil' %>
+            <%= render 'layouts/menu_option', option_path: new_user_session_path, option_name: t('login'), fa_name: 'fa-sign-in' %>
         <% end %>
       </ul>
     </div>
