--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -63,10 +63,8 @@
     <div class="modal-content">
       <div class="modal-body">
         <div id="my-area">
-          <h2><span class="first_name"></span> <span class="last_name"></span></h2>
-          <hr />
-          <h3><a class="user_email"></a></h3>
-          <h3 class="user_phone"></h3>
+          <h1>נא להעלות תמונה לפני השימוש באתר</h1>
+          <h1></h1>
         </div>
       </div>
     </div>
