new button for when no items modal

--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -69,8 +69,9 @@
       <div class="modal-content">
         <div class="modal-body">
           <div id="my-area">
-            <h1>נא להעלות תמונה לפני השימוש באתר</h1>
-            <a class="btn fa fa-plus-square-o center-block" style="font-size: 120px" href= <%=new_item_path%>></a>
+            <h1 class="text-center">נא להעלות תמונה</h1>
+            <br/>
+            <div class="round-button center-block"><div class="round-button-circle"><a href="<%= new_item_path %>" class="round-button"><span style="font-size: 50px" class=" fa fa-plus-square-o"></span></a></div></div>
           </div>
         </div>
       </div>
