--- a/app/assets/stylesheets/gallery.css.scss
+++ b/app/assets/stylesheets/gallery.css.scss
@@ -7,14 +7,14 @@
 }
 
 .round-button {
-  width:25%;
+  width:20%;
 }
 .round-button-circle {
   width: 100%;
   height:0;
-  padding-bottom: 100%;
+  padding-bottom: 90%;
   border-radius: 50%;
-  border:10px solid #cfdcec;
+  border:3px solid #cfdcec;
   overflow:hidden;
 
   background: #4679BD;
@@ -27,7 +27,7 @@
   display:block;
   float:left;
   width:100%;
-  padding-top:50%;
+  padding-top:33%;
   padding-bottom:50%;
   line-height:1em;
   margin-top:-0.5em;
@@ -35,7 +35,7 @@
   text-align:center;
   color:#e2eaf3;
   font-family:Verdana;
-  font-size:1.2em;
+  font-size:0;
   font-weight:bold;
   text-decoration:none;
 }
