--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,6 +3,9 @@
 <div class="col-lg-6 col-md-offset-3">
   <div class="jumbotron">
   <%= render 'devise/registrations/form' %>
+  <% if @current_user.blocks.present? %>
+    <%= link_to " החזר תמונות מוסתרות", clear_blocks_path, format: :json, remote: true, method: :post %> <br/>
+  <% end %>
   <%= link_to t('devise.registrations.delete'), registration_path(resource_name), :data => {:confirm => t('devise.registrations.delete_user') }, :method => :delete%>
   </div>
 </div>
