added email to footer

--- a/app/views/layouts/_navigation_footer.html.erb
+++ b/app/views/layouts/_navigation_footer.html.erb
@@ -3,5 +3,8 @@
     &copy; <%= Time.now.year %> <%= site_name %>
     &bull;
     <%= link_to "אודות", about_path %></li>
+    &bull;
+    <span>מה אהבתם? מה חסר?</span>
+    <a href="mailto:email@andreii.com">שלחו לנו מייל</a>
   </p>
 </footer>
